[package]
name = "worldgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "jpeg"] }
bevy_asset_loader = { version = "0.16.1", features = ["progress_tracking"] }
bevy_embedded_assets = "0.7.0"
iyes_progress = "0.8.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
