[package]
name = "worldgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["jpeg"] }
bevy_asset_loader = { version = "0.16.1", features = ["progress_tracking"] }
# bevy_embedded_assets = "0.7.0"
bitflags = "2.3.3"
block-mesh = "0.2.0"
iyes_progress = "0.8.0"
ndcopy = "0.3.0"
ndshape = "0.3.0"
noise = { version = "0.8.2", features = ["images"] }
ilattice = { version = "0.1.0", features = ["glam", "morton-encoding"] }
float-ord = "0.3.2"
once_cell = "1.18.0"
futures-lite = "1.13.0"
thread_local = "1.1.7"
bevy_atmosphere = "0.6.0"
bevy_egui = "0.20.3"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }

[patch.crates-io]
ilattice = { git = "https://github.com/Game4all/ilattice-rs", branch = "update-glam" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
