[package]
name = "worldgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = { version = "0.12.1", features = ["jpeg"] }
bevy_asset_loader = { version = "0.18.0" }
# bevy_embedded_assets = "0.7.0"
bitflags = "2.3.3"
block-mesh = "0.2.0"
iyes_progress = "0.9.1"
ndcopy = "0.3.0"
ndshape = "0.3.0"
noise = { version = "0.8.2", features = ["images"] }
simdnoise = "3.1.6"
ilattice = { version = "0.3.0", features = ["glam", "morton-encoding", "serde"] }
float-ord = "0.3.2"
once_cell = "1.18.0"
futures-lite = "1.13.0"
thread_local = "1.1.7"
bevy_atmosphere = "0.8.1"
bevy_egui = "0.23.0"
bevy_mod_raycast = "0.16.0"
bevy_vector_shapes = "0.6.0"
arrayvec = "0.7.4"
directories = "5.0.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13.0"
bytemuck = "1.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
